# web3_api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/api/v1/: polygon_api.py  schemes.py
src/core/: config.py  gunicorn_conf.py  logger_config.py
src/services/: web3_service.py
src/suppliers/: eth_supplier.py
src/utils/: connectors.py  exceptions_handlers.py  web3_conn.py
