[project]
name = "denet-api"
version = "0.1.0"
description = "denet api polygon network"
authors = [
    {name = "Maksim Ushakov",email = "jw999coding@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (==0.115.0)",
    "uvicorn (==0.35.0)",
    "gunicorn (==23.0.0)",
    "web3 (==7.13.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "multicall (==0.13.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_any_generics = true

[tool.black]
line-length = 90
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 90
